--- a/src/components/Courses/CourseCard.module.scss
+++ b/src/components/Courses/CourseCard.module.scss
@@ -1,7 +1,7 @@
 .course_card{
     box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em, rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em, rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
-    width: 24%;
-    height: 300px;
+    width: 21%;
+    height: 320px;
     margin-top: 30px;
     box-sizing: border-box;
     background-color: var(--color-ld);
@@ -13,6 +13,7 @@
     text-decoration: none;
     position: relative;
     transition: all .5s;
+    cursor: pointer;
 
     &:hover{
         transform: scale(1.05);
@@ -23,7 +24,7 @@
         top: 0;
         left: 0;
         width: 100%;
-        height: 40%;
+        height: 45%;
     }
 
     h3{
