--- a/src/components/PageCourse/TopicsContainer.module.scss
+++ b/src/components/PageCourse/TopicsContainer.module.scss
@@ -6,12 +6,14 @@
     box-sizing: border-box;
 
     ul{
+        overflow-y: scroll;
+        overflow-x: hidden;
         width: 100%;
         height: 85%;
         display: flex;
         flex-direction: column;
-        align-items: flex-start;
-        justify-content: center;
+        align-items: center;
+        justify-content: flex-start;
         position: relative;
 
         li{
@@ -26,19 +28,40 @@
             }
         }
 
-        &::after{
-            content: "";
-            width: 5px;
-            border-radius: 20px;
-            position: absolute;
-            right: 0;
-            height: 5%;
-            transition: all 1s;
-            background-color: var(--color-l);
-        }
+        // &::after{
+        //     content: "";
+        //     width: 5px;
+        //     border-radius: 20px;
+        //     position: absolute;
+        //     right: 0;
+        //     height: 5%;
+        //     transition: all 1s;
+        //     background-color: var(--color-l);
+        // }
 
-        &:hover::after{
-            height: 80%;
-        }
+        // &:hover::after{
+        //     height: 80%;
+        // }
     }
+}
+
+.topicsContainer ul::-webkit-scrollbar {
+    -webkit-appearance: none;
+}
+
+.topicsContainer ul::-webkit-scrollbar:vertical {
+    width:7px;
+}
+
+.topicsContainer ul::-webkit-scrollbar-button:increment,.topicsContainer ul::-webkit-scrollbar-button {
+    display: none;
+} 
+
+.topicsContainer ul::-webkit-scrollbar:horizontal {
+    height: 8px;
+}
+
+.topicsContainer ul::-webkit-scrollbar-thumb {
+    background-color: var(--color-ld);
+    border-radius: 50px;
 }
