--- a/styles/MarkDownEditor.css
+++ b/styles/MarkDownEditor.css
@@ -12,6 +12,7 @@
 
 .markdown_reader p {
     line-height: 30px;
+    margin: 30px 0px;
 }
 
 .markdown_reader em{
@@ -59,4 +60,10 @@
     left: 0;
     border-bottom-right-radius: 5px;
     border-top-right-radius: 5px;
+}
+
+.markdown_reader img {
+    width: 100%;
+    height: 40vh;
+    object-fit: contain;
 }
