--- a/styles/library.scss
+++ b/styles/library.scss
@@ -5,7 +5,7 @@
     background-color: var(--color-ld);
     display: flex;
     flex-direction: column;
-    padding: 30px;
+    padding: 10px 30px;
     box-sizing: border-box;
     position: relative;
     align-items: center;
@@ -19,14 +19,14 @@
         background: none;
         border: none;
         color: inherit;
-        height: 35px;
+        height: 30px;
         border-bottom: 1px solid var(--color-md);
     }
     
     button[type="submit"]{
         position: absolute;
-        bottom: 40px;
-        font-size: 20px;
+        bottom: 20px;
+        font-size: 18px;
         height: 40px;
         width: 50%;
         cursor: pointer;
@@ -37,7 +37,7 @@
     }
     
     label, button[type="submit"]{
-        margin-top: 40px;
+        margin-top: 30px;
         margin-bottom: 10px;
     }    
 }
