footer text and meet me

--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -1,5 +1,5 @@
 .footer{
-    margin-top: 150px;
+    margin: 150px 0px 30px 0px;
     height: 25vh;
     display: flex;
     flex-direction: column;
