--- a/src/components/Hero/HeroLinkCard.module.scss
+++ b/src/components/Hero/HeroLinkCard.module.scss
@@ -10,6 +10,15 @@
     transition: all .3s;
     position: relative;
 
+    .blank_div{
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
     &:hover{
         background-color: var(--color-md);
     }
