--- a/pages/course/[dirname]/index.module.scss
+++ b/pages/course/[dirname]/index.module.scss
@@ -3,3 +3,10 @@
     height: 90vh;
     display: flex;
 }
+
+@media screen and (max-width: 600px){
+    .container{
+        height: auto;
+        flex-direction: column-reverse;
+    }
+}
