--- a/src/components/Hero/Hero.module.scss
+++ b/src/components/Hero/Hero.module.scss
@@ -5,3 +5,11 @@
     align-items: center;
     justify-content: space-between;
 }
+
+@media screen and (max-width: 600px) {
+    .heroSection{
+        height: 120vh;
+        flex-direction: column;
+        align-items: flex-start;
+    }
+}
