--- a/src/components/PageCourse/Content.module.scss
+++ b/src/components/PageCourse/Content.module.scss
@@ -13,3 +13,15 @@
         font-size: 35px;
     }
 }
+
+@media screen and (max-width: 600px){
+    .content{
+        width: 100%;
+        margin-top: 30px;
+    }
+
+    .title{
+        font-size: 30px;
+        text-align: center;
+    }
+}
