--- a/src/components/PageCourse/TopicsContainer.module.scss
+++ b/src/components/PageCourse/TopicsContainer.module.scss
@@ -65,3 +65,30 @@
     background-color: var(--color-ld);
     border-radius: 50px;
 }
+
+@media screen and (max-width: 600px){
+    .topicsContainer{
+        width: 100%;
+        overflow: hidden;
+
+        ul{
+            flex-direction: row;
+            overflow-y: hidden;
+            overflow-x: scroll;
+            height: 100%;
+            width: auto;
+
+            li{
+                padding: 0;
+                width: 200px;
+                margin-top: 20px;
+                margin-left: 40px;
+                text-align: center;
+
+                a{
+                    width: 200px;
+                }
+            }
+        }
+    }
+}
