--- a/src/components/profile/ProfileCourses.module.scss
+++ b/src/components/profile/ProfileCourses.module.scss
@@ -41,3 +41,10 @@
         }
     }
 }
+
+@media screen and (max-width: 600px){
+    .card{
+        margin-top: 30px;
+        width: 95%;
+    }
+}
