--- a/src/components/Header/Navbar.module.scss
+++ b/src/components/Header/Navbar.module.scss
@@ -8,7 +8,13 @@
 
         li{
             cursor: pointer;
+            display: flex;
+
+            div{
+                display: flex;
+            }
         }
+        
     }
 }
 
