--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -1,10 +1,10 @@
 .footer{
-    margin: 150px 0px 30px 0px;
+    margin: 100px 0px 10px 0px;
     height: 25vh;
     display: flex;
     flex-direction: column;
     padding: 0 12%;
-    color: var(--color-md);
+    color: var(--color-l);
     justify-content: space-evenly;
 
     
